# AAAI-2026

./: .gitignore  BUG_FIXES.md  BUG_FIXES_COMPLETE.md  HOW_TO_RUN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_SUMMARY.md  PHASE_B_COMPLETE.md  README.md  README_SAFETY.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: ci.yml  pr.yml
annotations/: annotations_raw.csv  compute_agreement.py  prepare_annotation_batches.py  rubric.md
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  App.module.css  index.css
data/: README_DATA_COLLECTION.md  cve_list_important.txt
data/prompts/: BENCHMARK_SUMMARY.md  hallu-sec-benchmark.json  sanitization_report.json
data/scripts/: build_gold_truth.bat  build_gold_truth.sh  create_gold_truth_dataset.py  fetch_nvd_metadata.py  generate_synthetic_cves.py  validate_gold_truth.py
docs/: AAAI Personal Statement Ainsley Woo.docx  AAAI Research Statement AInsley Woo.docx  api-reference.md  architecture.md  changelog.md  deployment-guide.md  developer-guide.md  implementation.md  index.md  public_sources_seed_list.md  safety_policy_checklist.md  troubleshooting-guide.md  user-guide.md
experiments/: README.md
experiments/integration/: README.md  vuln_triage_workflow.py  workflow_scenarios.json
experiments/interpretability/: README.md  activation_probes.py  causal_tracing.py  causal_tracing_fixed.py  select_cases_for_interp.py
experiments/mitigations/: README.md  abstention_detector.py  abstention_detector_robust.py  build_retrieval_index.py  evaluate_mitigations.py  rag_grounding.py  symbolic_checker.py  symbolic_checker_v2.py
experiments/pilot/: IMPLEMENTATION_DETAILS.md  QUICK_START.md  RUN_PILOT_SUMMARY.md  SETUP_GUIDE.md  async_pilot_runner.py  async_runners.py  (+7 more)
notebooks/: analysis_template.py
prompts/: 00_README_PROMPTS.md  01_vulnerability_summary_templates.md  02_cve_existence_lookup_templates.md  03_malware_family_description_templates.md  04_secure_configuration_templates.md  05_pentest_reporting_templates.md  full_prompt_dataset.json  generate_full_prompt_dataset.py  ground_truth_validation_template.md  sanitize_prompts.py
scripts/: generate_benchmark.py
tests/: README.md  __init__.py  test_bug_fixes.py  test_io_utils.py  test_symbolic_checker.py
(+19 files in other folders)
