[project]
name = "llm-hallucination-research"
version = "2.1.0"
description = "Research framework for characterizing and mitigating LLM hallucinations in cybersecurity contexts"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Research Team"}
]
keywords = ["llm", "hallucination", "security", "research"]

[tool.ruff]
target-version = "py38"
line-length = 100
exclude = [
    ".git",
    ".github",
    "__pycache__",
    "*.egg-info",
    ".eggs",
    "build",
    "dist",
    ".venv",
    "venv",
    "notebooks",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "W191",   # indentation contains tabs
    "E402",   # module level import not at top of file
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/*" = ["B011"]      # assert False in tests

[tool.ruff.lint.isort]
known-first-party = ["experiments", "data", "annotations", "tests"]

[tool.black]
line-length = 100
target-version = ["py38", "py310", "py311"]
exclude = '''
/(
    \.git
    | \.github
    | __pycache__
    | \.eggs
    | build
    | dist
    | \.venv
    | venv
    | notebooks
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "notebooks/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "anthropic.*",
    "google.*",
    "tqdm.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["experiments", "data", "annotations"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/notebooks/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
